Bug 152577 - Database range disappears when deleting a sheet it doesn't belong to
Summary: Database range disappears when deleting a sheet it doesn't belong to
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.2.3 release
Hardware: All All
: medium major
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.6.0 target:7.5.4 target:7.4....
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Calc-DataRange
  Show dependency treegraph
 
Reported: 2022-12-18 13:37 UTC by Vladimir Sokolinskiy
Modified: 2023-05-03 09:51 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
DBRange_disappears.ods (7.72 KB, application/vnd.oasis.opendocument.spreadsheet)
2022-12-18 13:37 UTC, Vladimir Sokolinskiy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vladimir Sokolinskiy 2022-12-18 13:37:48 UTC
Created attachment 184222 [details]
DBRange_disappears.ods

The attached file has sheets Sheet1 and Sheet2. There is a Database Range named d_1 which refers to the range $Sheet1.$A$1.
After deleting Sheet2, range d_1 "disappears": Menu / Data / Define Range... does not show ranges.
Comment 1 m.a.riosv 2022-12-18 22:18:16 UTC
Reproducible even putting some data on a1:a2
Version: 7.4.3.2 (x64) / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US 
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9b46020c262045aed0beace4708565235c2523cc
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threadedCalc: CL
Comment 2 m.a.riosv 2022-12-18 22:30:22 UTC
Last working for me:
Version: 7.1.8.1 (x86) / LibreOffice Community
Build ID: e1f30c802c3269a1d052614453f260e49458c82c
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: es-AR (es_ES); UI: es-ES Calc: CL
Comment 3 raal 2022-12-19 19:05:01 UTC
This seems to have begun at the below commit.
Adding Cc: to Tünde Tóth ; Could you possibly take a look at this one?
Thanks
 c7baa2dd3209b9db60ee0699536135109918915d is the first bad commit
commit c7baa2dd3209b9db60ee0699536135109918915d
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Wed Aug 18 01:46:13 2021 +0200

    source 957d1e977d25385151c99e401124ad58217e53dd

https://gerrit.libreoffice.org/c/core/+/120235
Comment 4 Commit Notification 2023-04-27 16:59:04 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b88d11ba05085002cf847d4828ded52a3dfb3b09

tdf#152577 sc DBData: fix regression of database ranges

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 BogdanB 2023-04-27 17:16:47 UTC
No lost of the data range when deleting Sheet2

Verified. Fixed in
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b88d11ba05085002cf847d4828ded52a3dfb3b09
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Was bad in
Version: 7.5.2.1 (X86_64) / LibreOffice Community
Build ID: e8bf3b441b8370f8440b0339fd9490765a8d57ca
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 6 BogdanB 2023-04-28 07:00:34 UTC
You can mark as Resolved, if everything is done.
Comment 7 BogdanB 2023-04-28 08:28:37 UTC
Verified. Fixed in
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b88d11ba05085002cf847d4828ded52a3dfb3b09
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 8 Commit Notification 2023-04-28 09:43:10 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/3f778cbad0b3f00a09a9b2fbd60762c81eab1b41

tdf#152577 sc DBData: fix regression of database ranges

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Vladimir Sokolinskiy 2023-04-28 10:43:02 UTC
Colleagues, thank you very much for fixing and verifying the bug!
Comment 10 Commit Notification 2023-04-28 13:05:36 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/d9650695d30bcd1a885636984881603ed64ad6df

tdf#152577 sc DBData: fix regression of database ranges

It will be available in 7.4.8.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2023-05-03 09:51:11 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-4-7":

https://git.libreoffice.org/core/commit/203ad95d0a7a0c8224ce58c0c3e90b417ae06de9

tdf#152577 sc DBData: fix regression of database ranges

It will be available in 7.4.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.